<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pathfinder</string>
    <string name="action_settings">Параметры</string>
    <string name="action_disconnect">Отключить</string>
    <string name="load">Загрузить</string>
    <string name="delete">Удалить</string>
    <string name="close">Закрыть</string>
    <string name="connect">Подключить</string>
    <string name="send">Отправить</string>
    <string name="clear">Очистить</string>
    <string name="save">Save</string>
    <string name="bt_not_available">Bluetooth не доступен</string>
    <string name="bt_not_enabled">Bluetooth не был включён</string>
    <string name="status_not_connected">Bluetooth не подключён</string>
    <string name="status_conn_failed">Соединение прервано</string>
    <string name="status_connected_to">Подключены к %s</string>
    <string name="settings">Настройки приложения</string>
    <string name="algorithm">Выбор алгоритма</string>
    <string name="deleteObjects">Удаление объектов</string>
    <string name="color_picker">Выбор цвета</string>
    <string name="theme_selector">Выбор темы</string>
    <string name="grid_size">Размер поля</string>
    <string name="random_color">Случайный цвет</string>
    <string name="weight_change">Изменить веса (A*)</string>
    <string name="exchange">Обмен картами</string>
    <string name="default_gsize_message">Выбранный размер: 16</string>
    <string name="developer_mode">Режим разработчика</string>
    <string name="save_and_exit">Сохранить и выйти</string>
    <string name="saved_maps">Сохраннённые карты</string>
    <string name="execute">Ок</string>
    <string name="exit">Выход</string>
    <string name="info">Инфо</string>
    <string name="rename">Rename</string>
    <string name="map_list">Список карт</string>
    <string name="enter_map_name">Введите название карты</string>
    <string name="enter_new_map_name">Введите новое название карты</string>

</resources>
