<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0A0A30"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/themeStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/theme_selector"
        android:textColor="#f7028d"
        android:textSize="21sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/themeSpin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_shape" />
    
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_gravity="fill"
        android:layout_marginTop="10dp"
        android:background="@drawable/separator_purple" />

    <TextView
        android:id="@+id/gridSizeStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
		android:textColor="#f7028d"
        android:textSize="21sp"
        android:textStyle="bold"
        android:text="@string/grid_size" />

    <SeekBar
        android:id="@+id/gridSizeSb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="9"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/selectedGSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/default_gsize_message"
        android:textColor="#f7028d"
        android:textSize="15sp" />
    
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_gravity="fill"
        android:layout_marginTop="10dp"
        android:background="@drawable/separator_purple" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/randomColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_shape"
            android:text="@string/random_color"
            android:textColor="#f7028d"
            android:textSize="17sp" />

        <Button
            android:id="@+id/saveAndExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_shape"
            android:text="@string/save"
            android:textColor="#f7028d"
            android:textSize="17sp" />

    </LinearLayout>

</LinearLayout>
